<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_string">开始测试</string>
    <string name="app_name3">测试</string>
    <string name="app_name4">设置</string>
    <string name="system">检测系统信息</string>
    <string name="start">启动程序</string>
    <string name="cpu">开始测试</string>
    <string name="bg">开始测试</string>
    <string name="testmemory">测试内存</string>
    <string name="memoryinfo">memoryInfo</string>
    <string name="collect">采集频率:</string>
    <string name="receiver">收件人(多数人空格分割):</string>
    <string name="sender">发件人:</string>
    <string name="password">密码：</string>
    <string name="smtp">smtp服务器：</string>
    <string name="seconds">秒</string>
    <string name="window">是否显示浮窗</string>
    <string name="ok">保存</string>
    <string name="openwifi">开启wifi</string>
    <string name="closewifi">关闭wifi</string>
    
</resources>
