<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/time"
            android:text="@string/collect"
            android:layout_alignParentLeft="true"
            />
         <EditText 
             android:id="@+id/time"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:layout_toLeftOf="@+id/seconds"
             android:maxLength="5"
             />
         <TextView 
             android:id="@+id/seconds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/time"
             android:text="@string/seconds"
             android:layout_alignParentRight="true"
             />       
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/sender"
            android:text="@string/sender"
            />
        <EditText 
            android:id="@+id/sender"
            android:layout_width="200dp" 
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_alignBaseline="@+id/password"
            />
        <EditText 
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smtp"
            android:layout_alignBaseline="@+id/smtp"
            />
        <EditText 
            android:id="@+id/smtp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        >
        <EditText 
            android:id="@+id/recipients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receiver"
            />
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:id="@+id/floating_Window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/floating"
            android:text="@string/window"
            />
        <CheckBox 
            android:id="@+id/floating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <Button 
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/ok"
        />

</LinearLayout>
